--- a/templates/main.phtml
+++ b/templates/main.phtml
@@ -1,15 +1,26 @@
-<h1>Анализатор страниц</h1>
-
-<?php if (!empty($flash)): ?>
-    <p style="color: red"><?= $flash['error'][0]?></p>
-<?php endif; ?>
-<p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
-<form action="/urls" method="post" class="row">
-    <div class="col-8">
-            <label for="text" class="visually-hidden">Url для проверки</label>
-            <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
-    </div>
-    <div class="col-2">
-                <input type="submit" class="" value="Проверить">
-    </div>
-</form>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+  <h1>Анализатор страниц</h1>
+    <?php if (!empty($flash)): ?>
+        <p style="color: red"><?= $flash['error'][0]?></p>
+    <?php endif; ?>
+    <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
+    <form action="/urls" method="post" class="row">
+        <div class="col-8">
+                <label for="text" class="visually-hidden">Url для проверки</label>
+                <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
+        </div>
+        <div class="col-2">
+                    <input type="submit" class="" value="Проверить">
+        </div>
+    </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
