--- a/templates/main.phtml
+++ b/templates/main.phtml
@@ -18,7 +18,7 @@
                 <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
         </div>
         <div class="col-2">
-                    <input type="submit" class="" value="Проверить">
+                    <input type="submit" class="btn btn-primary" value="Проверить">
         </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
