--- a/templates/main.phtml
+++ b/templates/main.phtml
@@ -7,20 +7,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-  <h1>Анализатор страниц</h1>
-    <?php if (!empty($flash)): ?>
-        <p style="color: red"><?= $flash['error'][0]?></p>
-    <?php endif; ?>
-    <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
-    <form action="/urls" method="post" class="row">
-        <div class="col-8">
+    <header class="flex-shrink-0">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
+            <a class="navbar-brand" href="/">Анализатор страниц</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"            aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/">Главная</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/urls">Сайты</a>
+                  </li>
+                </ul>
+            </div>
+      </nav>
+    </header>
+    <main class="flex-grow-1">
+      <div class="container-lg mt-3">
+        <div class="row">
+          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+            <?php if (!empty($flash)): ?>
+                <p style="color: red"><?= $flash['error'][0]?></p>
+            <?php endif; ?>
+            <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
+            <form action="/urls" method="post" class="row" required>
+              <div class="col-8">
                 <label for="text" class="visually-hidden">Url для проверки</label>
                 <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
+              </div>
+              <div class="col-2">
+                <input type="submit" class="btn btn-primary" value="Проверить"> 
+              </div>   
+            </form>
+          </div>
         </div>
-        <div class="col-2">
-                    <input type="submit" class="btn btn-primary" value="Проверить">
-        </div>
-    </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </main>
   </body>
 </html>
