--- a/templates/main.phtml
+++ b/templates/main.phtml
@@ -32,6 +32,7 @@
             <?php if (!empty($flash)): ?>
                 <p style="color: red"><?= $flash['error'][0]?></p>
             <?php endif; ?>
+            <h1 class="display-3">Анализатор страниц</h1>
             <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
             <form action="/urls" method="post" class="row" required>
               <div class="col-8">
@@ -39,7 +40,7 @@
                 <input type="text" name="url[name]" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
               </div>
               <div class="col-2">
-                <input type="submit" class="btn btn-primary" value="Проверить"> 
+                <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить"> 
               </div>   
             </form>
           </div>
