--- a/templates/urls/show.phtml
+++ b/templates/urls/show.phtml
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="min-vh-100 d-flex flex-column">
     <header class="flex-shrink-0">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
             <a class="navbar-brand" href="/">Анализатор страниц</a>
@@ -17,52 +17,60 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="/">Главная</a>
+                    <a class="nav-link" href="/">Главная</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/urls">Сайты</a>
+                    <a class="nav-link active" href="/urls">Сайты</a>
                   </li>
                 </ul>
             </div>
       </nav>
     </header>
     <main class="flex-grow-1">
-        <div class="container-lg mt-3">
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
-
-                    <?php if (!empty($flash)): ?>
-                        <div class="alert alert-success" role="alert">
-                            <?= $flash['success'][0]?>
-                        </div>
-                    <?php endif; ?>
-
-                    <h1 class="display-3">Сайт: <?= htmlspecialchars($url['name']) ?></h1>
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-hover text-nowrap" data-test="url">
-                            <tbody>
-                                <tr>
-                                    <td>ID</td>
-                                    <td><?= htmlspecialchars($url['id']) ?></td>
-                                </tr>
-                                <tr>
-                                    <td>Имя</td>
-                                    <td><?= htmlspecialchars($url['name']) ?></td>
-                                </tr>
-                                <tr>
-                                    <td>Дата создания</td>
-                                    <td><?= htmlspecialchars($url['created_at']) ?></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <h2 class="mt-5 mb-3">Проверки</h2>
-                        <form method="post" action="/urls/<?= $id ?>/checks">
-                            <input type="submit" class="btn btn-primary" value="Запустить проверку">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <div class="container-lg mt-3">
+        <?php if (!empty($flash)): ?>
+          <div class="alert alert-success" role="alert">
+            <?= $flash['success'][0]?>
+          </div>
+        <?php endif; ?>
+        <h1>Сайт: <?= htmlspecialchars($url['name']) ?></h1>
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover text-nowrap" data-test="url">
+                <tbody>
+                    <tr>
+                        <td>ID</td>
+                        <td><?= htmlspecialchars($url['id']) ?></td>
+                    </tr>
+                    <tr>
+                        <td>Имя</td>
+                        <td><?= htmlspecialchars($url['name']) ?></td>
+                    </tr>
+                    <tr>
+                        <td>Дата создания</td>
+                        <td><?= htmlspecialchars($url['created_at']) ?></td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2 class="mt-5 mb-3">Проверки</h2>
+            <form method="post" action="/urls/<?= $id ?>/checks" class="mb-2">
+                <input type="submit" class="btn btn-primary" value="Запустить проверку">
+            </form>
+            <table class="table table-bordered table-hover" data-test="checks">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Код ответа</th>
+                  <th>h1</th>
+                  <th>title</th>
+                  <th>description</th>
+                  <th>Дата создания</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+        </div>          
+      </div>
     </main>
   </body>
 </html>
