--- a/templates/urls/show.phtml
+++ b/templates/urls/show.phtml
@@ -47,7 +47,7 @@
                     </tr>
                     <tr>
                         <td>Дата создания</td>
-                        <td><?= htmlspecialchars($url['created_at']) ?></td>
+                        <td><?= date("d.m.Y h:m:s", strtotime($url['created_at'])) ?></td>
                     </tr>
                 </tbody>
             </table>
