--- a/templates/urls/show.phtml
+++ b/templates/urls/show.phtml
@@ -39,7 +39,7 @@
                 <tbody>
                     <tr>
                         <td>ID</td>
-                        <td><?= htmlspecialchars($url['id']) ?></td>
+                        <!-- <td><?= htmlspecialchars($url['id']) ?></td> -->
                     </tr>
                     <tr>
                         <td>Имя</td>
