--- a/templates/urls/index.phtml
+++ b/templates/urls/index.phtml
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Мой анализатор СЕО - список страниц</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
@@ -32,11 +32,13 @@
                 <div class="alert alert-success" role="alert">
                     <?= $flash['success'][0]?>
                 </div>
-            <?php elseif (!empty($flash['errors'])): ?>
+            <?php elseif (!empty($flash['error'])): ?>
                 <div class="alert alert-danger" role="alert">
                     <?= $flash['error'][0]?>
                 </div>
             <?php endif; ?>
+            <?/*print_r($urls)*/?>
+            <?var_dump($urlIdArray)?>
             <h1>Сайты</h1>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover text-nowrap" data-test="urls">
@@ -53,11 +55,10 @@
                       <tr>
                         <td><?= $url['id'] ?></td>
                         <td><a href="/urls/<?= $url['id'] ?>"><?= htmlspecialchars($url['name']) ?></a></td>
-                        <td><?= $url['response_code'] ? date("d.m.Y h:m:s", strtotime($url['created_at'])) : '' ?></td>
+                        <td><?= $url['last_check'] ?? '' ?></td>
                         <td><?= $url['response_code'] ?? ''?></td>
-                    </tr>
+                      </tr>
                     <?php endforeach; ?>
-                    
                     </tbody>
                 </table>
             </div>
