--- a/templates/urls/show.phtml
+++ b/templates/urls/show.phtml
@@ -37,7 +37,8 @@
                     <?= $flash['error'][0]?>
                 </div>
             <?php endif; ?>
-        <?/*print_r($checks)*/?>
+        <?print_r($url)?>
+        <?print_r($pageAttributes)?>
         <h1>Сайт: <?= htmlspecialchars($url['name']) ?></h1>
         <div class="table-responsive">
             <table class="table table-bordered table-hover text-nowrap" data-test="url">
@@ -77,7 +78,7 @@
               <?php foreach ($checks as $check):?>
                 <tr>
                   <td><?= htmlspecialchars($numCheck)?></td>
-                  <td></td>
+                  <td><?= htmlspecialchars($pageAttributes['statusCode'])?></td>
                   <td>h1</td>
                   <td>title</td>
                   <td>description</td>
