--- a/templates/urls/show.phtml
+++ b/templates/urls/show.phtml
@@ -38,7 +38,8 @@
                 </div>
             <?php endif; ?>
         <?print_r($url)?>
-        <?print_r($pageAttributes)?>
+        <?print_r("-----ПРОВЕРКИ-----")?>
+        <?print_r($checks)?>
         <h1>Сайт: <?= htmlspecialchars($url['name']) ?></h1>
         <div class="table-responsive">
             <table class="table table-bordered table-hover text-nowrap" data-test="url">
@@ -53,7 +54,7 @@
                     </tr>
                     <tr>
                         <td>Дата создания</td>
-                        <td><?= date("d.m.Y h:m:s", strtotime($url['created_at'])) ?></td>
+                        <td><?= htmlspecialchars($url['created_at']) ?></td>
                     </tr>
                 </tbody>
             </table>
@@ -79,10 +80,9 @@
                 <tr>
                   <td><?= htmlspecialchars($numCheck)?></td>               
                   <td><?= htmlspecialchars($check['status_code'])?></td>
-                  <td>h1</td>
-                  <td>title</td>
-                  <td>description</td>
-                  <!-- <td><?= $check['created_at'] ? date("d.m.Y h:m:s", strtotime($check['created_at'])) : '' ?></td> -->
+                  <td><?= htmlspecialchars($check['h1'] ?? '-') ?></td>
+                  <td><?= htmlspecialchars($check['title'] ?? '-') ?></td>
+                  <td><?= htmlspecialchars($check['description'] ?? '-') ?></td>
                   <td><?= $check['created_at'] ?? '' ?></td>
                 </tr>
                 <?php $numCheck-- ?>
