--- a/templates/urls/show.phtml
+++ b/templates/urls/show.phtml
@@ -30,11 +30,12 @@
       <div class="container-lg mt-3">
         <?php if (!empty($flash['success'])): ?>
                 <div class="alert alert-success" role="alert">
-                    <?= $flash['success'][0]?>
+                    <?=$flash['success'][0]?>
+                    <?='Страница успешно проверена'?>
                 </div>
           <?php elseif (!empty($flash['error'])): ?>
                 <div class="alert alert-danger" role="alert">
-                    <?= $flash['error'][0]?>
+                    <?=$flash['error'][0]?>
                 </div>
             <?php endif; ?>
         <h1>Сайт: <?= htmlspecialchars($url['name']) ?></h1>
