--- a/templates/urls/index.phtml
+++ b/templates/urls/index.phtml
@@ -49,33 +49,40 @@
                     </tr>
                     </thead>
                     <tbody>
+                    <?php foreach ($urls as $url): ?>
+                      <?php
+                        $lastCheck = $lastChecks[$url['id']] ?? null;
+                        $lastCheckDate = $lastCheck['created_at'] ?? '';
+                        $statusCode = $lastCheck['status_code'] ?? '';
+                      ?>
+                    <?php endforeach ?>
                     <?php foreach ($urls as $url):?>
                       <tr>
                         <td><?= $url['id'] ?></td>
                         <td><a href="/urls/<?= $url['id'] ?>"><?= htmlspecialchars($url['name']) ?></a></td>
                         <td>
-                        <?php
+                        <?/*php
                           $checkDates = null;
                           foreach ($checkData as $key => $value): 
                               if ($key == $url['id']): 
                                   $checkDates = $value;
                               endif; 
                           endforeach; 
-                          $lastCheckDate = $checkDates ? $checkDates : '';
+                          $lastCheckDate = $checkDates ? $checkDates : '';*/
                         ?>
                           <?= $lastCheckDate ?>
                         </td>
                         <td>
-                        <?php
+                        <?/*php
                         $checkCodeResponse = null;
                           foreach ( $checkStatusCode as $key => $value): 
                               if ($key == $url['id']): 
                                 $checkCodeResponse = $value;
                               endif; 
                           endforeach; 
-                          $codeResponse = $checkCodeResponse ? $checkCodeResponse : '';
+                          $codeResponse = $checkCodeResponse ? $checkCodeResponse : '';*/
                         ?>
-                        <?= $codeResponse ?>
+                        <?= $statusCode ?>
                         </td>
                       </tr>
                     <?php endforeach; ?>
