--- a/templates/main.phtml
+++ b/templates/main.phtml
@@ -1,31 +1,4 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Анализатор страниц</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header class="flex-shrink-0">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-            <a class="navbar-brand" href="/">Анализатор страниц</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"            aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="/">Главная</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/urls">Сайты</a>
-                  </li>
-                </ul>
-            </div>
-      </nav>
-    </header>
+    <?=$this->fetch('header.phtml', ['page' => 'main'])?>
     <main class="flex-grow-1">
       <div class="container-lg mt-3">
         <div class="row">
@@ -39,8 +12,7 @@
             <?php else: ?>
               <?php $placeholder = "https://www.example.com";?>
             <?php endif; ?>
-            
-            <? /*var_dump($url); */?>
+
             <h1 class="display-3">Анализатор страниц</h1>
             <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
               <form action="/urls" method="post" class="row" required>
@@ -63,5 +35,6 @@
         </div>
       </div>
     </main>
+    <?=$this->fetch('footer.phtml')?>
   </body>
 </html>
