fixed db mistake, url problems

--- a/templates/urls_show.phtml
+++ b/templates/urls_show.phtml
@@ -10,6 +10,7 @@
                     <?=$flash['error'][0]?>
                 </div>
             <?php endif; ?>
+            <?/*php var_dump($url); */?>
         <h1>Сайт: <?= htmlspecialchars($url['name']) ?></h1>
         <div class="table-responsive">
             <table class="table table-bordered table-hover text-nowrap" data-test="url">
