added new logic for addUrlCheck func

--- a/templates/urls_show.phtml
+++ b/templates/urls_show.phtml
@@ -63,7 +63,7 @@
         </div>          
       </div>
     </main>
-    <?= $this->fetch('footer.phtml', ['url' => 'John']) ?>
+    <?=$this->fetch('footer.phtml')?>
   </body>
 </html>
             
